--- a/src/main/resources/templates/fragments/capacitador/capacitadores.html
+++ b/src/main/resources/templates/fragments/capacitador/capacitadores.html
@@ -44,7 +44,7 @@
                         <td th:text="${capacitador.codigocapacitador}">Código</td>
                         <td th:text="${capacitador.estadocapacitador}?'Activo':'Inactivo'">Estado</td>
                         <!--<td th:text="${capacitador.codigoempleado.nombreempleado}">Codigo</td>-->
-                        <td th:text="${capacitador.codigoempleado.nombreempleado}+', '+${capacitador.codigoempleado.nombreempleado}">Nombre</td>
+                        <td th:text="${capacitador.codigoempleado.nombreempleado}+', '+${capacitador.codigoempleado.apellidoempleado}">Nombre</td>
                         <td th:text="${capacitador.nombrecapacitador}">Nombre</td>
                         <td th:text="${capacitador.temadominio}">Tema</td>
                         <td th:text="${capacitador.institucioncapacitador}">Institución</td>
