--- a/src/main/resources/templates/fragments/comite/comiteform.html
+++ b/src/main/resources/templates/fragments/comite/comiteform.html
@@ -121,7 +121,7 @@
                         <div class="col-md-12">
                             <div class="row" align="center">
                                  <a href="#" th:href="@{/comites/}" class="btn btn-primary glyphicon glyphicon-arrow-left">Regresar</a>  
-                                <button type="submit"  id="guardar"   class="btn btn-success"><span class="glyphicon glyphicon-floppy-disk"></span>Guardar</button>
+                                <button type="submit"  id="guardar"  onclick="fecha_format();"   class="btn btn-success"><span class="glyphicon glyphicon-floppy-disk"></span>Guardar</button>
                                 <button type="reset" class="btn btn-secondary"><span class="glyphicon glyphicon-erase"></span>Limpiar</button>
                             </div>
                         </div>
