--- a/src/main/resources/templates/fragments/empleado/empleadoform.html
+++ b/src/main/resources/templates/fragments/empleado/empleadoform.html
@@ -386,6 +386,7 @@
                              <option value="">--seleccione tipo de pension del Empleado--</option>
                         <option value="AFP CONFIA">AFP CONFIA</option>
                         <option value="AFP CRECER">AFP CRECER</option>
+                        <option value="INPEP">INPEP</option>
                     </select>
                 </div>
                 <div class="popup "><b>
@@ -408,7 +409,18 @@
                 <div class="form-group">
                     <label class="col-sm-3 control-label">Banco en el que se le deposita al empleado(*):</label>
                     <div class="col-sm-5">
-                        <input type="text" class="form-control"   required="true" size="50" maxlength="50"  th:field="*{nombreinstiuciondepositar}"  />
+                         <select class="form-control" name="nombreinstiuciondepositar" th:field="*{nombreinstiuciondepositar}" >
+                            <!--th:field="*{departamentorecidencia}">-->
+                        <option value="">--seleccione el Banco en el que se le deposita al empleado--</option>
+                        <option value="Banco Agricola">Banco Agricola</option>
+                        <option value="Banco Cuscatlan">Banco Cuscatlan</option>
+                         <option value="Banco Davivienda">Banco Davivienda</option>
+                         <option value="Banco Promerica">Banco Promerica</option>
+                         <option value="Banco de los Trabajadores">Banco de los Trabajadores</option>
+                         <option value="Banco Scotiabank">Banco Scotiabank</option>
+                         <option value="Banco Credomatic">Banco Credomatic</option>
+                    </select>
+                        <!--<input type="text" class="form-control"   required="true" size="50" maxlength="50"  th:field="*{nombreinstiuciondepositar}"  />-->
                     </div>
                      <div class="popup "><b>
                             <a id="" class="btnayuda btn btn-info" href="#" onmouseover="javascript:mostrarAyuda('poppup25')" onmouseout ="javascript:ocultarAyuda('poppup25')">a</a></b>
@@ -472,7 +484,7 @@
 
                  <a href="#" th:href="@{/empleados/}" class="btn btn-primary glyphicon glyphicon-arrow-left">Regresar</a>  
 
-                <button type="submit" id="guardar"  class="btn btn-success"><span class="glyphicon glyphicon-floppy-disk"></span>Guardar</button>
+                <button type="submit" id="guardar"  onclick="fecha_format();" class="btn btn-success"><span class="glyphicon glyphicon-floppy-disk"></span>Guardar</button>
                 <button type="reset" class="btn btn-secondary"><span class="glyphicon glyphicon-erase"></span>Limpiar</button>
                 <br><br>
             </div>
