--- a/src/main/resources/templates/fragments/mision/misionesasignadas.html
+++ b/src/main/resources/templates/fragments/mision/misionesasignadas.html
@@ -51,7 +51,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                             <tr>
                                 <th hidden>id</th>
                                 <th>Codigo</th>
-                                <th>Tipo de misi&oacute;n</th>
+                                <!--<th>Tipo de misi&oacute;n</th>-->
                                 <th>Nombre de misi&oacute;n</th>
                                 <th>Fecha de misi&oacute;n</th>
                                 <th> </th><th> </th>
@@ -63,7 +63,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                         <tr th:each="emcapList, i : ${misioneslist}">
                             <td hidden th:text= "${emcapList[__${0}__]}">id</td>
                             <td th:text= "${emcapList[__${1}__]}">codigo</td>
-                            <td th:text= "${emcapList[__${3}__]}">tipo</td>
+                            <!--<td th:text= "${emcapList[__${3}__]}">tipo</td>-->
                             <td th:text= "${emcapList[__${2}__]}">nombremision</td>
                             <td th:text= "${#calendars.format(emcapList[__${4}__], 'dd/MM/yyyy')}">fechasalida</td>
                             <td><a th:href="${'../showmisionesemp1/' + emcapList[__${1}__]}" class="btn btn-info">Mostrar Empleados <br>Asignados</a></td>
