--- a/src/main/resources/templates/fragments/puesto/puestoform.html
+++ b/src/main/resources/templates/fragments/puesto/puestoform.html
@@ -244,7 +244,7 @@
                 <div class="col-md-12">
                     <div class="row" align="center">
                         <a href="#" th:href="@{/puestos/}" class="btn btn-primary glyphicon glyphicon-arrow-left">Regresar</a>  
-                        <button type="submit" id ="guardar" class="btn btn-success"><span class="glyphicon glyphicon-floppy-disk"></span>Guardar</button>
+                        <button type="submit" onclick="fecha_format();" id ="guardar" class="btn btn-success"><span class="glyphicon glyphicon-floppy-disk"></span>Guardar</button>
                         <button type="reset" class="btn btn-secondary"><span class="glyphicon glyphicon-erase"></span>Limpiar</button>
                     </div>
                 </div>
